@@ -359,6 +359,7 @@ sub clean_publisher_place {
 		'Olomouci' => 'Olomouc',
 		decode_utf8('Ostravě') => 'Ostrava',
 		decode_utf8('Poděbradech') => decode_utf8('Poděbrady'),
+		decode_utf8('Přelouči') => decode_utf8('Přelouč'),
 		decode_utf8('Přerově') => decode_utf8('Přerov'),
 		decode_utf8('Řevnicích') => decode_utf8('Řevnice'),
 		decode_utf8('Telči') => decode_utf8('Telč'),
