@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_publisher_place);
-use Test::More 'tests' => 22;
+use Test::More 'tests' => 23;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -110,3 +110,8 @@ is($ret, decode_utf8('Telč'), encode_utf8("Publisher name '$input_publisher_pla
 $input_publisher_place = decode_utf8('V Hradci Králové');
 $ret = clean_publisher_place($input_publisher_place);
 is($ret, decode_utf8('Hradec Králové'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
+
+# Test.
+$input_publisher_place = decode_utf8('V Přelouči');
+$ret = clean_publisher_place($input_publisher_place);
+is($ret, decode_utf8('Přelouč'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
