@@ -1,4 +1,5 @@
 0.05
+ - Add Přelouč to publishing places cleanup.
  - Add edition number use case.
  - Add publisher place use case.
  - Add verbose parameter.
